feat(course): implement course type categorization
Add the ability to categorize courses as either CORE or ELECTIVE types, enhancing the course management system's flexibility.

Changes:
- Create new CourseType enum with CORE and ELECTIVE values
- Add type field to Course entity with CORE as default value
- Update CourseDTO to include CourseType field with validation
- Update CourseMapperImpl to handle the new type field in both directions
- Add repository methods findByType and findByTypeAndActive
- Implement service methods getCoursesByType and getActiveCoursesByType
- Add REST endpoints /api/courses/type/{type} and /api/courses/type/{type}/active
- Create database migration script for adding type column to courses table
- Add unit test for getCoursesByType functionality

This enhancement allows administrators to properly categorize courses and enables
filtering of courses by their type, improving course discovery and management.